# whale-project

./: .gitignore  NEXT_STEPS.md  README.md  ROADMAP.md  index.html  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
dashboard/: app.js  index.html  styles.css
data/processed/: acartia-summary.json  aggregate-summary.json  group-summary.csv  map-points-web.json  monthly-group-totals.csv
data/reference/: species-reference.json  whale_dashboard_research_pack.md
src/whales/: __init__.py  aggregate.py  build.py  clean.py  reference.py
tests/: test_aggregate.py  test_clean.py
