[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "whales"
version = "0.1.0"
description = "Whale sightings data pipeline and analysis project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
whales-clean = "whales.clean:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
